--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,6 @@
-@import "_header";
-@import "_main";
-@import "_footer";
+@import "home";
+
 @import "../../out/styles/fonts";
 body {
-  font-family: Ubuntu-Regular;
+  font-family: Ubuntu;
 }
