--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,6 @@
 header {
-  box-shadow: 1px 1px 3px #999999;
+  $title-color: #72d0f4;
+  font-family: Ubuntu;
   .upper-header {
     background-image: url("../../out/img/home/upper-image.jpg");
     background-size: cover;
@@ -17,11 +18,11 @@ header {
       align-items: center;
       max-height: 700px;
       height: 100%;
+      padding: 0 11%;
       .upper-title {
         width: 540px;
         display: flex;
         flex-direction: column;
-        margin: 0 11%;
         padding-left: 16px;
         background-color: rgba(114, 208, 244, 0.8);
         border-bottom: 4px solid #00bff0;
@@ -75,40 +76,42 @@ header {
   .header-socials {
     background-color: #00bff0;
     padding: 0 11%;
-    display: flex;
-    justify-content: space-between;
-    .header-call {
-      display: flex;
-      align-items: center;
-      color: #ffffff;
-      font-size: 12px;
-      a {
-        text-decoration: none;
+    .row {
+      .header-call {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
         color: #ffffff;
-        .fa-phone-alt {
-          font-size: 14px;
-          padding: 10px;
-        }
-      }
-    }
-    .header-social-icons {
-      display: flex;
-      align-items: center;
-      a {
-        i {
-          font-size: 14px;
+        font-size: 12px;
+        a {
+          text-decoration: none;
           color: #ffffff;
-          padding: 10px;
-        }
-        &:hover {
-          cursor: pointer;
-          transform: scale(1.3);
+          .fa-phone-alt {
+            font-size: 14px;
+            padding: 10px;
+          }
         }
       }
+      .header-social-icons {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+          a {
+            i {
+              font-size: 14px;
+              color: #ffffff;
+              padding: 10px;
+            }
+            &:hover {
+              cursor: pointer;
+              transform: scale(1.3);
+            }
+          }
+        }
     }
   }
   .header-navigation {
-    background-color: #72d0f4;
+    background-color: $title-color;
     .navbar-expand-xl {
       margin: 0 11%;
       padding: 30px 0;
