--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -143,7 +143,7 @@ body {
             text-transform: uppercase;
             display: flex;
             justify-content: center;
-            color: #00bff0;
+            color: $bottom-border;
             font-size: 30px;
             margin: 30px 0 20px 0;
           }
@@ -185,6 +185,250 @@ body {
         }
       }
     }
+    .trainers-main-home {
+      margin-top: 60px;
+      .row {
+        padding: $page-width;
+        .our-trainers {
+          padding: 0;
+          .our-trainers-title {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 30px;
+            color: $bottom-border;
+            padding: 20px 0;
+          }
+          .our-trainers-content {
+            .carousel-inner {
+              .carousel-item {
+                background-color: #f3f3f3;
+                height: 265px;
+                .row {
+                  display: flex;
+                  .column-trainers {
+                    display: flex;
+                    flex-direction: column;
+                    margin: 0;
+                    padding: 30px 15px;
+                    .trainer-photo {
+                      display: flex;
+                      justify-content: center;
+                      img{
+                        width: 80px;
+                        height: auto;
+                        border-radius: 50%;
+                        padding-bottom: 5px;
+                      }
+                    }
+                    .trainer-name {
+                      text-align: center;
+                      font-size: 14px;
+                      font-weight: bolder;
+                      text-transform: uppercase;
+                      color: $title-color;
+                    }
+                    .trainer-spec {
+                      text-align: center;
+                      font-size: 12px;
+                      font-style: italic;
+                      text-transform: uppercase;
+                      color: $title-color;
+                    }
+                    .trainer-desc {
+                      padding-top: 5px;
+                      p {
+                        text-align: center;
+                        font-style: italic;
+                        font-size: 12px;
+                      }
+                    }
+                    .trainer-social {
+                      display: flex;
+                      justify-content: space-between;
+                      z-index: 999;
+                      .trainer-like {
+                        .fa-heart {
+                          &:hover {
+                            color: #ff0000;
+                          }
+                        }
+                        .fa-thumbs-up {
+                          padding: 0 5px;
+                          &:hover {
+                            color: #029ec6;
+                          }
+                        }
+                      }
+                      .trainer-share {
+                        .fa-twitter {
+                          padding: 0 5px;
+                          &:hover {
+                            color: #72d0f4;
+                          }
+                        }
+                        .fa-facebook-f {
+                          &:hover {
+                            color: #72d0f4;
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+                &::after {
+                  content: "";
+                  position: absolute;
+                  left: 50%;
+                  bottom: 15%;
+                  transform: rotate(0deg);
+                  display: block;
+                  width: 1px;
+                  height: 70%;
+                  background-color: $title-color;
+                }
+              }
+
+            }
+            .carousel-control-prev {
+              .carousel-control-prev-icon {
+                color: $bottom-border;
+                font-size: 25px;
+              }
+            }
+            .carousel-control-next {
+              .carousel-control-next-icon {
+                color: $bottom-border;
+                font-size: 25px;
+              }
+            }
+          }
+        }
+        .next-events {
+          .next-events-title {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 30px;
+            color: $bottom-border;
+            padding: 20px 0;
+          }
+          .next-events-content {
+            background-color: #a5e5fe;
+            height: 265px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            .next-event-row {
+              display: flex;
+              padding: 0 20px;
+              .next-event-row-date {
+                span {
+                  font-size: 16px;
+                  font-weight: bolder;
+                  color: #ffffff;
+                  line-height: 25px;
+                }
+                img {
+                  width: 120px;
+                  height: 70px;
+                }
+              }
+              .next-event-row-desc {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .next-event-hour {
+                  color: #f31d20;
+                  font-size: 10px;
+                  font-weight: bolder;
+                  padding-top: 5px;
+                }
+                .next-event-type {
+                  color: #000000;
+                  font-size: 18px;
+                  font-weight: normal;
+                  text-transform: uppercase;
+                }
+                p {
+                  color: #000000;
+                  font-size: 12px;
+                  font-weight: normal;
+                  margin: 0;
+                  text-align: center;
+                }
+                form {
+                  button {
+                    color: #f31d20;
+                    font-size: 10px;
+                    text-transform: uppercase;
+                    background-color: transparent;
+                    border: 1px solid #000000;
+                    border-radius: 2px;
+                    padding: 0 10px;
+                    &:active, &:focus {
+                      outline: none;
+                    }
+                  }
+                }
+              }
+            }
+            &::after {
+              content: "";
+              position: absolute;
+              right: 50%;
+              top: 23%;
+              transform: rotate(90deg);
+              display: block;
+              width: 1px;
+              height: 80%;
+              background-color: #ffffff;
+            }
+          }
+
+        }
+        .from-the-blog {
+          .from-the-blog-title {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 30px;
+            color: $bottom-border;
+            padding: 20px 0;
+          }
+          .from-the-blog-content {
+            background-color: #d4d6d6;
+            height: 265px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            padding: 10px 20px;
+            .from-the-blog-row {
+              display: flex;
+
+              img {
+                width: 70px;
+                height: 70px;
+                border-radius: 10px;
+              }
+              .from-the-blog-row-text {
+                padding-left: 20px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                p {
+                  margin: 0;
+                  font-size: 13px;
+                  color: #ffffff;
+                }
+                span {
+                  color: #7e7f7f;
+                  font-size: 13px;
+                  padding: 5px 0;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
 
@@ -211,7 +455,15 @@ body {
     }
   }
 }
-
+@media screen and (max-width: 1199px) {
+  body {
+    main {
+      .trainers-main-home {
+        margin-top: 100px;
+      }
+    }
+  }
+}
 
 
 
