ready home page without map, ready footer for all pages

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -4,8 +4,10 @@ body {
   $page-width: 0 11%;
   font-family: Ubuntu;
   main {
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
     .upper-main-home {
-      padding: $page-width;
       .row {
         .upper-main-home-image {
           display: flex;
@@ -36,7 +38,6 @@ body {
       }
     }
     .live-main-home {
-      padding: $page-width;
       .row {
         .live-translation {
           margin-bottom: 30px;
@@ -80,7 +81,6 @@ body {
       }
     }
     .class-main-home {
-      padding: $page-width;
       .row {
         .all-classes {
           .all-classes-title {
@@ -188,7 +188,6 @@ body {
     .trainers-main-home {
       margin-top: 60px;
       .row {
-        padding: $page-width;
         .our-trainers {
           padding: 0;
           .our-trainers-title {
@@ -199,6 +198,7 @@ body {
             padding: 20px 0;
           }
           .our-trainers-content {
+            margin: 0 15px;
             .carousel-inner {
               .carousel-item {
                 background-color: #f3f3f3;
@@ -245,7 +245,8 @@ body {
                     .trainer-social {
                       display: flex;
                       justify-content: space-between;
-                      z-index: 999;
+                      z-index: 2;
+                      padding: 0 15px;
                       .trainer-like {
                         .fa-heart {
                           &:hover {
@@ -287,18 +288,31 @@ body {
                   background-color: $title-color;
                 }
               }
-
             }
-            .carousel-control-prev {
-              .carousel-control-prev-icon {
-                color: $bottom-border;
-                font-size: 25px;
+            .button-prev-trainers {
+              position: absolute;
+              left: 1%;
+              bottom: 50%;
+              text-decoration: none;
+              .fa-chevron-left {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: $title-color;
+                font-size: 24px;
               }
             }
-            .carousel-control-next {
-              .carousel-control-next-icon {
-                color: $bottom-border;
-                font-size: 25px;
+            .button-next-trainers {
+              position: absolute;
+              right: 1%;
+              bottom: 50%;
+              text-decoration: none;
+              .fa-chevron-right {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: $title-color;
+                font-size: 24px;
               }
             }
           }
@@ -383,7 +397,6 @@ body {
               background-color: #ffffff;
             }
           }
-
         }
         .from-the-blog {
           .from-the-blog-title {
@@ -402,7 +415,6 @@ body {
             padding: 10px 20px;
             .from-the-blog-row {
               display: flex;
-
               img {
                 width: 70px;
                 height: 70px;
@@ -424,8 +436,138 @@ body {
                   padding: 5px 0;
                 }
               }
+              &:hover {
+                transform: scale(1.01);
+              }
             }
           }
+        }
+      }
+    }
+    .gallery-partners-main-home {
+      margin-top: 60px;
+      .row {
+        .gallery {
+          .gallery-title {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 30px;
+            color: $bottom-border;
+            padding: 20px 0;
+          }
+          .gallery-carousel {
+            .carousel-inner {
+              .carousel-item {
+                height: 340px;
+                .row {
+                  .column-gallery {
+                    width: 250px;
+                    padding: 0 ;
+                    img {
+                      height: 170px;
+                      width: 100%;
+                      max-width: 262px;
+                      padding-bottom: 4px;
+                      &:hover {
+                        transform: scale(1.02);
+                        z-index: 100;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+            .button-prev-gallery {
+              position: absolute;
+              left: 2%;
+              bottom: 41%;
+              text-decoration: none;
+              .fa-chevron-left {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: $title-color;
+                width: 60px;
+                height: 60px;
+                font-size: 36px;
+                border-radius: 50%;
+                background-color: rgba(255, 255, 255, 0.6);
+                text-align: center;
+              }
+            }
+            .button-next-gallery {
+              position: absolute;
+              right: 2%;
+              bottom: 41%;
+              text-decoration: none;
+              .fa-chevron-right {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: $title-color;
+                width: 60px;
+                height: 60px;
+                font-size: 36px;
+                border-radius: 50%;
+                background-color: rgba(255, 255, 255, 0.6);
+                text-align: center;
+              }
+            }
+          }
+        }
+        .partner {
+          .partner-title {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 30px;
+            color: $bottom-border;
+            padding: 20px 0;
+          }
+          .container-fluid {
+            .row {
+              height: 340px;
+              .column1 {
+                padding: 15px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: flex-end;
+                width: 130px;
+                img {
+                  width: 125px;
+                }
+              }
+              .column2 {
+                padding: 15px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: flex-start;
+                width: 130px;
+                img {
+                  width: 125px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    .twitter-main-home {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 120px 0;
+      img {
+        padding-right: 20px;
+      }
+      p {
+        font-size: 14px;
+        color: #41cdf1;
+        width: 700px;
+        padding-left: 20px;
+        a {
+          text-decoration: none;
         }
       }
     }
@@ -449,6 +591,13 @@ body {
                 display: none;
               }
             }
+          }
+        }
+      }
+      .gallery-partners-main-home {
+        .row {
+          .gallery {
+            display: none;
           }
         }
       }
