--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -18,48 +18,54 @@ header {
       align-items: center;
       max-height: 700px;
       height: 100%;
-      padding: 0 11%;
-      .upper-title {
-        width: 540px;
-        display: flex;
-        flex-direction: column;
-        padding-left: 16px;
-        background-color: rgba(114, 208, 244, 0.8);
-        border-bottom: 4px solid #00bff0;
-        .upper-title-head {
-          font-weight: normal;
-          font-size: 48px;
-          text-transform: uppercase;
-          padding-top: 5px;
-        }
-        .upper-title-middle {
-          font-weight: lighter;
-          font-size: 24px;
-          text-transform: uppercase;
-        }
-        p {
-          font-weight: lighter;
-          font-size: 14px;
-          max-width: 400px;
-        }
-        .upper-title-button {
+      max-width: 1200px;
+      margin: 0 auto;
+      width: 100%;
+      padding: 0;
+      .row {
+        padding-left: 15px;
+        .upper-title {
+          width: 540px;
           display: flex;
-          justify-content: center;
-          padding-bottom: 20px;
-          button {
-            background-color: transparent;
-            border: 1px solid #ffffff;
-            border-radius: 5px;
-            box-shadow: none;
-            color: #ffffff;
-            font-size: 12px;
-            font-weight: bolder;
-            padding: 5px 15px;
-            &:active, &:focus {
-              outline: none;
-            }
-            &:hover {
-              cursor: pointer;
+          flex-direction: column;
+          padding-left: 16px;
+          background-color: rgba(114, 208, 244, 0.8);
+          border-bottom: 4px solid #00bff0;
+          .upper-title-head {
+            font-weight: normal;
+            font-size: 48px;
+            text-transform: uppercase;
+            padding-top: 5px;
+          }
+          .upper-title-middle {
+            font-weight: lighter;
+            font-size: 24px;
+            text-transform: uppercase;
+          }
+          p {
+            font-weight: lighter;
+            font-size: 14px;
+            max-width: 400px;
+          }
+          .upper-title-button {
+            display: flex;
+            justify-content: center;
+            padding-bottom: 20px;
+            button {
+              background-color: transparent;
+              border: 1px solid #ffffff;
+              border-radius: 5px;
+              box-shadow: none;
+              color: #ffffff;
+              font-size: 12px;
+              font-weight: bolder;
+              padding: 5px 15px;
+              &:active, &:focus {
+                outline: none;
+              }
+              &:hover {
+                cursor: pointer;
+              }
             }
           }
         }
@@ -75,14 +81,17 @@ header {
   }
   .header-socials {
     background-color: #00bff0;
-    padding: 0 11%;
     .row {
+      max-width: 1200px;
+      margin: 0 auto;
+      width: 100%;
       .header-call {
         display: flex;
         align-items: center;
         justify-content: flex-start;
         color: #ffffff;
         font-size: 12px;
+        padding: 0;
         a {
           text-decoration: none;
           color: #ffffff;
@@ -96,6 +105,7 @@ header {
         display: flex;
         align-items: center;
         justify-content: flex-end;
+        padding: 0;
           a {
             i {
               font-size: 14px;
@@ -113,7 +123,9 @@ header {
   .header-navigation {
     background-color: $title-color;
     .navbar-expand-xl {
-      margin: 0 11%;
+      max-width: 1170px;
+      margin: 0 auto;
+      width: 100%;
       padding: 30px 0;
       .navbar-toggler {
         .fa-bars {
